--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Hello World</h1>
+    <h1> <center>Hello World</center></h1>
     <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-2">
